--- a/sitedata/tutorials.yml
+++ b/sitedata/tutorials.yml
@@ -45,11 +45,7 @@
   organizers: Ludovik Coba, Roberto Confalonieri and Markus Zanker
   abstract: |-
     <p>
-    In this tutorial we will provide a review of eXplainable Recommender Systems (XRSs), and a practical hands-on session using a recently developed software toolkit called RecoXplainer. RecoXplainer is a unified, extendable and easy to use Python toolkit that includes several explainability techniques that are useful for various groups of stakeholders.
-    <br />
-    The tutorial will be organized in two parts. The first part will provide the necessary background knowledge about Explainable AI and explanations techniques in recommender systems, such as model-based, post-hoc explanations, offline and online evaluation of explanations. The second part will consist of a hands-on session where attendees will be guided to the use of RecoXplainer, and to generate several examples of explainable recommendations.
-    <br />
-    The target audience is assumed to have a certain acquaintance with recommender systems, Matrix Factorisation, and information retrieval. For the hands-on session a basic understanding of Python is required. A more advanced programming knowledge is required for those who would like to experiment with the toolkit, e.g., for inspecting the code to find advanced features, or to learn how to extend the current framework.
+    In this tutorial we will provide an introduction to eXplainable Recommender Systems (XRSs), and a practical hands-on session exemplifying the use of RecoXplainer. RecoXplainer is a unified, extendable and easy to use Python toolkit that includes several explainability techniques that are useful for various groups of stakeholders. The tutorial will be organised in two parts. The first part provides the necessary background about explainability and explainable AI, eXplainable Recommender Systems, and different categories and formats of explanations. The second part consists of an overview of RecoXplainer, and several implemented techniques for explaining recommendations (e.g., model-based, post-hoc explanations) and evaluate explanations. Tutorial's attendees will be guided to the use of RecoXplainer, and to generate several examples of explainable recommendations. The target audience is assumed to have a certain acquaintance with recommender systems, and collaborative filtering. For the hands-on session, a basic understanding of Python is required.
     </p>
   info: |-
     This tutorial has a prerecorded talk on this page (see below) that you can watch anytime during the conference. It
@@ -216,7 +212,7 @@
   organizers: Filip Ilievski, Antoine Bosselut, Simon Razniewski and Mayank Kejriwal
   abstract: |-
     <p>
-    The tutorial on Commonsense Knowledge Acquisition and Representation will consist of four main components, each covered by one of the presenters, followed by a discussion session. We will start by introducing our work on axiomatizating commonsense knowledge and comparing it to prior theories. The participants would then get familiar with the Commonsense Knowledge Graph (CSKG) (Ilievski et al., 2020), a recent resource that integrates seven diverse commonsense sources. Thirdly, we will discuss how commonsense knowledge can be automatically extracted, as well as qualified with DICE (Chalier et al., 2020) metrics like typicality and salience. We will use COMET (Bosselut et al., 2019) to improve the completeness of commonsense knowledge graphs based on language models, like BERT and GPT-2, and discuss how it can be leveraged on downstream question answering (QA) tasks. We will conclude the tutorial with a discussion of the way forward, and propose to combine language models (LMs), knowledge graphs (KGs), and axiomatization in the next-generation commonsense reasoning techniques. Prior knowledge expected from participants will be minimal. Some knowledge of machine learning and language modeling will be helpful, but not compulsory: we will introduce relevant machine learning concepts so that everyone has an opportunity to follow along.
+    The tutorial will consist of four main components, each covered by one of the presenters, followed by a discussion session. We will start by introducing theories on an axiomatization of commonsense knowledge. Next, we will cover efforts to harmonize nodes and relations across heterogeneous commonsense sources, as well as the impact of such consolidation on downstream reasoning tasks. Thirdly, we will discuss how commonsense knowledge can be automatically extracted from text, as well as quantitatively and qualitatively contextualized. Then, we will discuss how large-scale models, such as BERT, GPT-2, and T5, learn to implicitly represent an abundance of commonsense knowledge from reading the web. Also, how this knowledge can be extracted through carefully-designed language prompting, or through fine-tuning on knowledge graph tuples. We will conclude the tutorial with a discussion of the way forward, and propose to combine language models, knowledge graphs, and axiomatization in the next-generation commonsense reasoning techniques.
     </p>
   info: |-
     This tutorial has a prerecorded talk on this page (see below) that you can watch anytime during the conference. It
@@ -529,13 +525,11 @@
   prerecorded: '38940826'
 - UID: MH9
   title: A Visual Tour of Bias Mitigation Techniques for Word Representations
-  organizers: Sunipa Dev, Jeff M. Phillips, Archit Rathore, Vivek Srikumar and Bei
+  organizers: Archit Rathore, Sunipa Dev, Jeff M. Phillips, Vivek Srikumar and Bei
     Wang
   abstract: |-
     <p>
     Word vector embeddings have been shown to contain and amplify biases in data they are extracted from. Consequently, many techniques have been proposed to identify, mitigate, and attenuate these biases in word representations. In this tutorial, we will review a collection of state-of-the-art debiasing techniques. To aid this, we provide an open source web-based visualization tool and offer hands-on experience in exploring the effects of these debiasing techniques on the geometry of high-dimensional word vectors. To help understand how various debiasing techniques change the underlying geometry, we decompose each technique into interpretable sequences of primitive operations and study their effect on the word vectors using dimensionality reduction and interactive visual exploration.
-    <br />
-    Prerequisite Knowledge The attendees are expected to understand the basics of linear algebra and dimensionality reduction. Familiarity with basic NLP would be helpful but is not required. The audience is not assumed to have knowledge about bias in NLP; however, the tutorial will still be applicable to those who do.
     </p>
   info: |-
     This tutorial has a prerecorded talk on this page (see below) that you can watch anytime during the conference. It
@@ -555,6 +549,10 @@
     zoom_link: 123.com
     hosts: Sunipa Dev, Jeff M. Phillips, Archit Rathore, Vivek Srikumar and Bei Wang
   authors:
+  - name: Archit Rathore
+    description: |+
+      is a 4th year Ph.D. student at the School of Computing at the University of Utah. His current research focuses on probing machine learning models through visualization techniques to improve interpretability.
+
   - name: Sunipa Dev
     description: |+
       received her PhD at the School of Computing at the University of Utah in Fall 2020 and is a CI Postdoctoral Fellow at UCLA. Her research focuses on understanding the structure of language representations and leveraging that to isolate and decouple associations and concept subspaces within.
@@ -562,10 +560,6 @@
   - name: Jeff M. Phillips
     description: |+
       is an Associate Professor at the School of Computing, and Director of the Utah Center for Data Science, at the University of Utah. He is an expert in the geometry of data, and actively publishes in top venues in machine learning & data mining, algorithms & geometry, and databases.
-
-  - name: Archit Rathore
-    description: |+
-      is a 4th year Ph.D. student at the School of Computing at the University of Utah. His current research focuses on probing machine learning models through visualization techniques to improve interpretability.
 
   - name: Vivek Srikumar
     description: |+
@@ -607,18 +601,18 @@
   authors:
   - name: Hima Lakkaraju
     description: |+
-      is an Assistant Professor at Harvard University working on explaining complex machine learning models to decision-makers (e.g., judges, doctors). Hima was recently named in the 35 innovators under 35 by MIT Tech Review, and has given invited workshop talks at ICML, NeurIPS, AAAI, and CVPR. Website: https://himalakkaraju.github.io/
+      is an Assistant Professor at Harvard University working on explaining complex machine learning models to decision-makers (e.g., judges, doctors). Hima was recently named in the 35 innovators under 35 by MIT Tech Review, and has given invited workshop talks at ICML, NeurIPS, AAAI, and CVPR. <a href="https://himalakkaraju.github.io/"> Website </a>.
 
   - name: Julius Adebayo
     description: |+
-      is a Ph.D. student at MIT working on developing and understanding approaches that seek to make machine learning-based systems reliable when deployed. More broadly, he is interested in rigorous approaches to help develop models that are robust to spurious associations, distribution shifts, and align with ‘human’ values. Website: https://juliusadebayo.com/
+      is a Ph.D. student at MIT working on developing and understanding approaches that seek to make machine learning-based systems reliable when deployed. More broadly, he is interested in rigorous approaches to help develop models that are robust to spurious associations, distribution shifts, and align with ‘human’ values. <a href="https://juliusadebayo.com/"> Website </a>.
 
   - name: Sameer Singh
-    description: 'is an Assistant Professor at UC Irvine working on robustness and
+    description: is an Assistant Professor at UC Irvine working on robustness and
       interpretability of machine learning. Sameer has presented tutorials and invited
       workshop talks at EMNLP, NeurIPS, NAACL, WSDM, ICLR, ACL, and AAAI, and received
-      paper awards at KDD 2016, ACL 2018, EMNLP 2019, AKBC 2020, and ACL 2020. Website:
-      http://sameersingh.org/'
+      paper awards at KDD 2016, ACL 2018, EMNLP 2019, AKBC 2020, and ACL 2020. <a
+      href="http://sameersingh.org/"> Website </a>.
   prerecorded: '38940826'
 - UID: AQ2
   title: Topological Data Analysis in Document Classification
@@ -802,7 +796,7 @@
   prerecorded: '38940826'
 - UID: AH4
   title: From Statistical Relational to Neural Symbolic Artificial Intelligence
-  organizers: Luc De Raedt, Sebastijan Duman_i_, Robin Manhaeve and Giuseppe Marra
+  organizers: Luc De Raedt, Sebastijan Dumancic, Robin Manhaeve and Giuseppe Marra
   abstract: |-
     <p>
     The integration of learning and reasoning is one of the key challenges in artificial intelligence and machine learning today. The area neural symbolic computation tackles this challenge by integrating symbolic reasoning with neural networks. This tutorial will provide an introduction to Neural Symbolic Artificial Intelligence (NeSy) by drawing several parallels with another field that has a rich tradition in integrating learning and reasoning, namely Statistical Relational Artificial Intelligence (StarAI). The tutorial will discuss seven dimensions for introducing and categorizing several StarAI and NeSy approaches. By positioning a wide variety of systems along these dimensions, the tutorial makes it possible to underline common patterns and similarities between them. Interesting opportunities for further research will be described, by looking at areas across the dimensions that have not yet been covered. The tutorial is intended for artificial intelligence researchers and practitioners, as well as domain experts interested in the integration of symbolic reasoning and neural computation. Basic knowledge of logic and/or graphical models and/or neural computation at the level of an introductory course in AI will be helpful but is not a prerequisite.
@@ -818,18 +812,18 @@
     start_time: 2021-02-03 17:00:00+00:00
     end_time: 2021-02-03 20:00:00+00:00
     zoom_link: 123.com
-    hosts: Luc De Raedt, Sebastijan Duman_i_, Robin Manhaeve and Giuseppe Marra
+    hosts: Luc De Raedt, Sebastijan Dumancic, Robin Manhaeve and Giuseppe Marra
   - name: AH4
     start_time: 2021-02-03 17:00:00+00:00
     end_time: 2021-02-03 20:00:00+00:00
     zoom_link: 123.com
-    hosts: Luc De Raedt, Sebastijan Duman_i_, Robin Manhaeve and Giuseppe Marra
+    hosts: Luc De Raedt, Sebastijan Dumancic, Robin Manhaeve and Giuseppe Marra
   authors:
   - name: Luc De Raedt
     description: |+
       is full professor at the Department of Computer Science, KU Leuven, and director of Leuven.AI, the newly founded KU Leuven Institute for AI. He is a guest professor at Örebro University in the Wallenberg AI, Autonomous Systems and Software Program. He received his PhD in Computer Science from KU Leuven (1991), and was full professor (C4) and Chair of Machine Learning at the Albert-Ludwigs-University Freiburg, Germany (1999-2006). His research interests are in Artificial Intelligence, Machine Learning and Data Mining, as well as their applications. He is well known for his contributions in the areas of learning and reasoning, in particular, for his work on probabilistic and inductive programming. He co-chaired important conferences such as ECMLPKDD 2001 and ICML 2005 (the European and International Conferences on Machine Learning), ECAI 2012 and will chair IJCAI in 2022 (the European and international AI conferences). He is on the editorial board of Artificial Intelligence, Machine Learning and the Journal of Machine Learning Research. He is a EurAI and AAAI fellow, and received an ERC Advanced Grant in 2015.
 
-  - name: "Sebastijan Duman\u010Di\u0107"
+  - name: Sebastijan Dumancic
     description: |+
       is post-doctoral researcher in the DTAI research group at KU Leuven. His post-doctoral research is funded by the FWO’s junior post-doctoral fellowship. He obtained his PhD summa cum laude in the same group in 2018 under the supervision of Prof. Dr. Hendrik Blockeel. His PhD thesis has been awarded an honourable mention for the EurAI Distinguished Dissertation Award, organised by EurAI. His research focuses on program learning and the integration of symbolic and sub-symbolic approaches to AI.
 
@@ -850,7 +844,7 @@
   organizers: Yao Ma, Wei Jin, Yiqi Wang, Tyler Derr and Jiliang Tang
   abstract: |-
     <p>
-    Graph structured data such as social networks and molecular graphs are ubiquitous in the real world. It is of great research importance to design advanced algorithms for representation learning on graph structured data so that downstream tasks can be facilitated. Graph Neural Networks (GNNs), which generalize the deep neural network models to graph structured data, pave a new way to effectively learn representations for graph structured data either from the node level or the graph level. Thanks to their strong representation learning capability, GNNs have gained practical significance in various applications ranging from recommendation, natural language processing to healthcare. It has become a hot research topic and attracted increasing attention from the machine learning and data mining community recently. This tutorial of GNNs is timely for AAAI 2021 and covers relevant and interesting topics, including representation learning on graph structured data using GNNs, the robustness of GNNs, the scalability of GNNs and applications based on GNNs.
+    Graph structured data such as social networks and molecular graphs are ubiquitous in the real world. It is of great research importance to design advanced algorithms for representation learning on graph-structured data so that downstream tasks can be facilitated. Graph Neural Networks (GNNs), which generalize the deep neural network models to graph-structured data, pave a new way to effectively learn representations for graph-structured data either from the node level or the graph level. Thanks to their strong representation learning capability, GNNs have gained practical significance in various applications ranging from recommendation, natural language processing to healthcare. It has become a hot research topic and attracted increasing attention from the machine learning and data mining community recently. This tutorial of GNNs is timely for AAAI 2021 and covers relevant and interesting topics, including representation learning on graph-structured data using GNNs, self-supervised learning of GNNs, the robustness of GNNs, the scalability of GNNs, and applications based on GNNs.
     </p>
   info: |-
     This tutorial has a prerecorded talk on this page (see below) that you can watch anytime during the conference. It
@@ -1073,7 +1067,7 @@
     Orgun
   abstract: |-
     <p>
-    This tutorial presents representative and state-of-the-art theories and approaches to build recommender systems (RS) and the ubiquitous applications of RS in nearly every aspect of our daily life, including eating, dressing, housing and travelling. To be specific, we will first present the background and foundations of RS, followed by the illustration of representative and advanced machine learning approaches that can be used for building RS, including latent factor models, deep learning models, graph learning models and knowledge graph models. Finally, we will demonstrate the ubiquity of RS by introducing the typical real-world applications of RS in both traditional domains, such as e-commerce, social network, and emerging domains including fashion industry, financial industry, and healthcare industry. Specifically, we will illustrate the domain characteristics and the data characteristics in each domain, and then introduce the appropriate RS approaches to generate recommendations for each specific domain based on the unique characteristics of the domain. We will conclude the tutorial by outlining future research directions in this area. No specific prerequisite knowledge is required, but a rudimentary knowledge of RS and some machine learning basic (e.g., factorization machine, deep learning) will be helpful.
+    This tutorial presents representative and state-of-the-art theories and approaches to build recommender systems (RS) and the ubiquitous applications of RS in nearly every aspect of our daily life, including eating, dressing, housing and travelling. To be specific, we will first present the background and foundations of RS, followed by the illustration of representative and advanced machine learning approaches that can be used for building RS, including latent factor models, deep learning models, graph learning models and knowledge graph models. Finally, we will demonstrate the ubiquity of RS by introducing the typical real-world applications of RS in both traditional domains, such as e-commerce, social network, and emerging domains including fashion industry, financial industry, and healthcare industry. We will conclude the tutorial by outlining future research directions in this area. No specific prerequisite knowledge is required, but a rudimentary knowledge of RS and some machine learning basic (e.g., factorization machine, deep learning) will be helpful.
     </p>
   info: |-
     This tutorial has a prerecorded talk on this page (see below) that you can watch anytime during the conference. It
